--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,23 +11,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.The_Football_World_Cup"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.team.team_Activity"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.champ.championship_Activity"
+            android:name=".activity_login.xml"
             android:exported="false" />
         <activity
-            android:name=".ui.table.table_Activity"
+            android:name=".team.team_Activity"
             android:exported="false" />
         <activity
-            android:name=".ui.match.Match_Activity"
+            android:name=".champ.championship_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".table.table_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".match.Match_Activity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
